# WebServer-ClientCLI

./: .gitignore  LICENSE  README.md
web_server/: CMakeLists.txt  log.txt  specifications.prd
web_server/include/client/: tcp_client.h
web_server/include/common/: logger.h  protocol.h
web_server/include/server/: client_handler.h  data_cache.h  tcp_server.h
web_server/src/client/: main.cpp  tcp_client.cpp
web_server/src/common/: logger.cpp  protocol.cpp
web_server/src/server/: client_handler.cpp  data_cache.cpp  main.cpp  tcp_server.cpp
